--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "basic-elysia",
-  "version": "1.0.50",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
-  },
-  "dependencies": {
-    "elysia": "latest"
-  },
-  "devDependencies": {
-    "bun-types": "latest"
-  },
-  "module": "src/index.js"
+    "name": "basic-elysia",
+    "version": "1.0.50",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "bun run --watch src/index.ts",
+        "seed": "bun prisma/seed.ts"
+    },
+    "dependencies": {
+        "@faker-js/faker": "^9.0.3",
+        "@prisma/client": "5.13.0",
+        "elysia": "latest",
+        "prisma": "5.13.0"
+    },
+    "devDependencies": {
+        "bun-types": "latest"
+    },
+    "module": "src/index.js"
 }
