--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "bun run --watch src/index.ts",
-        "seed": "bun prisma/seed.ts"
+        "seed": "bun prisma/seed.ts",
+        "build:production": "bun build",
+        "build:preview": "bun build --mode preview"
     },
     "dependencies": {
         "@faker-js/faker": "^9.0.3",
